--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -24,7 +24,7 @@ Provides:
 - diy-0.1
 - diy
 Publishes: 
-Source-Url: https://github.com/marcellodionisiowr/openshift-wr-tomcat-cartridge/archive/master.zip
+Source-Url: https://codeload.github.com/marcellodionisiowr/openshift-wr-tomcat-cartridge/zip/master
 Subscribes:
   set-env:
     Type: ENV:*
