--- a/bin/control
+++ b/bin/control
@@ -27,7 +27,7 @@ function restart() {
 }
 
 function status() {
-   if output=$(curl http://$OPENSHIFT_DIY_IP:$OPENSHIFT_DIY_PORT 2>&1 )
+   if output=$(curl http://$OPENSHIFT_WEBRATIO_IP:$OPENSHIFT_WEBRATIO_PORT 2>&1 )
    then
       client_result "Application is running"
    else
