--- a/bin/control
+++ b/bin/control
@@ -55,7 +55,7 @@ case "$1" in
   start)     start ;;
   stop)      stop ;;
   restart)   restart ;;
-  status)    status ;;
+  show)    status ;;
   reload)    reload ;;
   tidy)      tidy ;;
   deploy)	 deploy ;;
