--- a/bin/control
+++ b/bin/control
@@ -48,7 +48,7 @@ function reload() {
 function tidy() {
   client_message "Emptying logs in dir: $OPENSHIFT_LOG_DIR"
   shopt -s dotglob
-  rm -rf $OPENSHIFT_LOG_DIR/diy.log*
+  rm -rf $OPENSHIFT_LOG_DIR/wr.log*
 }
 
 case "$1" in
