--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -1,18 +1,12 @@
 ---
-Name: webratio
-Cartridge-Short-Name: WebRatio
-Display-Name: WebRatio 0.1
-Description: The Do-It-Yourself (DIY) application type is a blank slate for trying
-  unsupported languages, frameworks, and middleware on OpenShift. See the community
-  site for examples of bringing your favorite framework to OpenShift.
+Name: webratioapp
+Cartridge-Short-Name: WebRatio Application
+Display-Name: WebRatio Application 0.1
+Description: WebRatio Application provides a Java web container for web applications based on Tomcat 7, and a MySQL database suitable to store persistent data. 
 Version: '0.1'
 License: ASL 2.0
 License-Url: http://www.apache.org/licenses/LICENSE-2.0.txt
 Cartridge-Version: 0.0.13
-Compatible-Versions:
-- 0.0.10
-- 0.0.11
-- 0.0.12
 Cartridge-Vendor: webratio
 Vendor: webratio
 Categories:
@@ -21,10 +15,8 @@ Website:
 Help-Topics:
   Getting Started: https://www.openshift.com/videos/getting-started-with-diy-applications-on-openshift
 Provides:
-- diy-0.1
-- diy
 Publishes: 
-Source-Url: https://github.com/marcellodionisiowr/openshift-wr-tomcat-cartridge/archive/master.zip
+Source-Url: http://downloads.webratio.com/misc/cloud/Openshift/WebRatioApplication.zip
 Subscribes:
   set-env:
     Type: ENV:*
